--- a/nuget.config
+++ b/nuget.config
@@ -5,5 +5,6 @@
         </config>
         <packageSources>
                 <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+                <add key="netvips-nightly" value="https://ci.appveyor.com/nuget/net-vips" />
         </packageSources>
 </configuration>
