--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/VisualPinball.Unity.Editor.csproj
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/VisualPinball.Unity.Editor.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Title>VisualPinball.Unity.Editor</Title>
     <Description>A bridge between VisualPinball.Engine and Unity</Description>
     <Authors>freezy;ravarcade;shaderbytes;rbxnk;jsm174;Vroonsh;Rowlan;kleisauke;ecurtz;Pandeli</Authors>
@@ -8,7 +8,7 @@
     <AssemblyVersion>0.1.0.0</AssemblyVersion>
     <AssemblyFileVersion>0.1.0.0</AssemblyFileVersion>
     <InformationalVersion>0.1.0.0</InformationalVersion>
-    <LangVersion>8</LangVersion>
+    <LangVersion>9.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="**/*.meta" Visible="false" />
@@ -31,6 +31,9 @@
     <Reference Include="UnityEditor">
       <HintPath>..\Plugins\.unity\UnityEditor.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEditor.CoreModule">
+      <HintPath>..\Plugins\.unity\UnityEditor.CoreModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.IMGUIModule">
       <HintPath>..\Plugins\.unity\UnityEngine.IMGUIModule.dll</HintPath>
     </Reference>
@@ -40,7 +43,7 @@
     <Reference Include="UnityEngine.TextRenderingModule">
       <HintPath>..\Plugins\.unity\UnityEngine.TextRenderingModule.dll</HintPath>
     </Reference>
-    <Reference Include="UnitEngine.InputSystem">
+    <Reference Include="UnityEngine.InputSystem">
       <HintPath>..\Plugins\.unity\Unity.InputSystem.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AudioModule">
