--- a/VisualPinball.Unity/VisualPinball.Unity.Test/VisualPinball.Unity.Test.csproj
+++ b/VisualPinball.Unity/VisualPinball.Unity.Test/VisualPinball.Unity.Test.csproj
@@ -26,7 +26,7 @@
     <PackageReference Include="NUnit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0-preview-20211109-03" />
-    <PackageReference Include="FluentAssertions" Version="5.10.3" ExcludeAssets="Compile" />
+    <PackageReference Include="FluentAssertions" Version="6.2.0" ExcludeAssets="Compile" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\VisualPinball.Unity.Editor\VisualPinball.Unity.Editor.csproj" />
@@ -36,7 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FluentAssertions">
-      <HintPath>$(NuGetPackageRoot)\fluentassertions\5.10.3\lib\net47\FluentAssertions.dll</HintPath>
+      <HintPath>$(NuGetPackageRoot)\fluentassertions\6.2.0\lib\netstandard2.1\FluentAssertions.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\Plugins\.unity\UnityEngine.CoreModule.dll</HintPath>
