scripting: trigger lamp events on the event bus

--- a/VisualPinball.Unity/VisualPinball.Unity/VisualPinball.Unity.asmdef
+++ b/VisualPinball.Unity/VisualPinball.Unity/VisualPinball.Unity.asmdef
@@ -11,6 +11,7 @@
 		"Unity.Physics.Hybrid",
 		"Unity.Transforms",
 		"Unity.InputSystem",
+		"Unity.VisualScripting.Core",
 		"VisualPinball.Engine",
 		"VisualPinball.Resources"
 	],
