--- a/VisualPinball.Unity/Documentation~/creators-guide/toc.yml
+++ b/VisualPinball.Unity/Documentation~/creators-guide/toc.yml
@@ -32,6 +32,16 @@
       items:
        - name: Camera Settings
          href: editor/advanced/camera-settings.md
+
+- name: Tutorials
+  href: tutorials/index.md
+  items:
+    - name: Create Realistic Looking Plastics (with Blender)
+      href: tutorials/plastics_with_blender/index.md
+      items:
+        - name: Prepare Artwork
+          href: tutorials/plastics_with_blender/1-prepare-artwork.md
+
 - name: Manual
   href: manual/manual.md
   items:
