doc: Update changelog and authors.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "Rowlan",
     "Kleis Auke Wolthuizen <info@kleisauke.nl>",
     "Eli Curtz <eli@nuprometheus.com>",
-    "Pandeli"
+    "Pandeli",
+    "Cupid"
   ],
   "documentationUrl": "https://docs.visualpinball.org/",
   "changelogUrl": "https://docs.visualpinball.org/CHANGELOG.html",
