--- a/VisualPinball.Resources/VisualPinball.Resources.csproj
+++ b/VisualPinball.Resources/VisualPinball.Resources.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Title>VisualPinball.Resources</Title>
     <Description>Meshes and Textures shipped with Visual Pinball</Description>
-    <Authors>freezy;ravarcade;shaderbytes;rbxnk;jsm174;Vroonsh;Rowlan;kleisauke;ecurtz;Pandeli</Authors>
+    <Authors>freezy;ravarcade;shaderbytes;rbxnk;jsm174;Vroonsh;Rowlan;kleisauke;ecurtz;Pandeli;Cupid</Authors>
     <Copyright>Copyright 2021 freezy - &lt;freezy@vpdb.io&gt;</Copyright>
     <AssemblyVersion>0.1.0.0</AssemblyVersion>
     <AssemblyFileVersion>0.1.0.0</AssemblyFileVersion>
