misc: update to support ios-arm64

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,8 @@ jobs:
             rid: osx-x64
           - os: macos-latest
             rid: osx-arm64
+          - os: macos-latest
+            rid: ios-arm64
           - os: ubuntu-latest
             rid: linux-x64
     steps:
