--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "com.unity.burst": "1.6.3",
     "com.unity.entities": "0.17.0-preview.42",
+    "com.unity.formats.fbx": "4.1.2",
     "com.unity.jobs": "0.8.0-preview.23",
     "com.unity.mathematics": "1.2.5",
     "com.unity.inputsystem": "1.2.0",
