doc: Add page about score reels.

--- a/VisualPinball.Unity/Documentation~/creators-guide/toc.yml
+++ b/VisualPinball.Unity/Documentation~/creators-guide/toc.yml
@@ -96,6 +96,8 @@
         href: manual/mechanisms/drop-target-banks.md
       - name: Rotators
         href: manual/mechanisms/rotators.md
+      - name: Score Reels
+        href: manual/mechanisms/score-reels.md
       - name: Score Motors
         href: manual/mechanisms/score-motors.md
       - name: Collision Switches
