jobs: Create colliders and use bartofzo/NativeTrees for octree.

--- a/VisualPinball.Unity/VisualPinball.Unity/VisualPinball.Unity.asmdef
+++ b/VisualPinball.Unity/VisualPinball.Unity/VisualPinball.Unity.asmdef
@@ -10,7 +10,8 @@
         "Unity.Mathematics.Extensions",
         "Unity.Transforms",
         "Unity.InputSystem",
-        "VisualPinball.Engine"
+        "VisualPinball.Engine",
+        "com.bartofzo.nativetrees"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
