jobs: Bump dependencies and remove remaining systems.

--- a/VisualPinball.Unity/VisualPinball.Unity.Editor/VisualPinball.Unity.Editor.asmdef
+++ b/VisualPinball.Unity/VisualPinball.Unity.Editor/VisualPinball.Unity.Editor.asmdef
@@ -2,6 +2,7 @@
     "name": "VisualPinball.Unity.Editor",
     "rootNamespace": "",
     "references": [
+        "Unity.Collections",
         "Unity.Entities",
         "Unity.Entities.Hybrid",
         "Unity.Formats.Fbx.Editor",
