--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "unityRelease": "0f1",
   "dependencies": {
     "com.unity.entities": "1.0.16",
+    "com.bartofzo.nativetrees": "0.1.6",
     "com.unity.formats.fbx": "4.1.2",
     "com.unity.inputsystem": "1.3.0",
     "com.unity.ugui": "1.0.0",
