--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
             rid: android-arm64-v8a
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-dotnet@v1
+      - uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '3.1.x'
       - name: Build
@@ -55,13 +55,13 @@ jobs:
         with:
           name: Plugins
           path: VisualPinball.Unity/Plugins
-      - uses: actions/cache@v3
-        with:
-         path: VisualPinball.Unity/VisualPinball.Unity.Test/TestProject~/Library
-         key: Library-Test-Project
-         restore-keys: |
-           Library-Test-Project
-           Library
+      #- uses: actions/cache@v3
+      #  with:
+      #   path: VisualPinball.Unity/VisualPinball.Unity.Test/TestProject~/Library
+      #   key: Library-Test-Project
+      #   restore-keys: |
+      #     Library-Test-Project
+      #     Library
       - uses: game-ci/unity-test-runner@main
         id: test
         with:
