--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,7 @@ jobs:
     name: Unit Test
     needs: [ build ]
     runs-on: ubuntu-latest
+    if: false
     steps:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
