--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,17 +45,16 @@ jobs:
           name: Plugins
           path: tmp
 
-  test:
-    name: Unit Test
-    needs: [ build ]
-    runs-on: ubuntu-latest
-    if: false
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/download-artifact@v3
-        with:
-          name: Plugins
-          path: VisualPinball.Unity/Plugins
+#  test:
+#    name: Unit Test
+#    needs: [ build ]
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - uses: actions/download-artifact@v3
+#        with:
+#          name: Plugins
+#          path: VisualPinball.Unity/Plugins
       #- uses: actions/cache@v3
       #  with:
       #   path: VisualPinball.Unity/VisualPinball.Unity.Test/TestProject~/Library
@@ -63,31 +62,31 @@ jobs:
       #   restore-keys: |
       #     Library-Test-Project
       #     Library
-      - uses: game-ci/unity-test-runner@main
-        id: test
-        with:
-          #unityVersion: "2022.3.10f1"
-          projectPath: VisualPinball.Unity/VisualPinball.Unity.Test/TestProject~
-          artifactsPath: VisualPinball.Unity/VisualPinball.Unity.Test/TestProject~/artifacts
-          testMode: all
-          customParameters: -debugCodeOptimization -enableCodeCoverage -burst-disable-compilation -coverageOptions enableCyclomaticComplexity;assemblyFilters:+VisualPinball.Engine;pathFilters:-**/VisualPinball.Engine/Math/Triangulator/**,-**/VisualPinball.Engine/Math/Mesh/** -coverageResultsPath artifacts
-      - run: |
-          curl -s https://codecov.io/bash | bash -s - -f ${{ steps.test.outputs.artifactsPath }}/TestProject~-opencov/EditMode/TestCoverageResults_0000.xml
-      - uses: MirrorNG/nunit-reporter@v1.1.0
-        if: always()
-        with:
-          path: ${{ steps.test.outputs.artifactsPath }}/*.xml
-          access-token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: Test results
-          path: ${{ steps.test.outputs.artifactsPath }}
+#      - uses: game-ci/unity-test-runner@main
+#        id: test
+#        with:
+#          #unityVersion: "2022.3.10f1"
+#          projectPath: VisualPinball.Unity/VisualPinball.Unity.Test/TestProject~
+#          artifactsPath: VisualPinball.Unity/VisualPinball.Unity.Test/TestProject~/artifacts
+#          testMode: all
+#          customParameters: -debugCodeOptimization -enableCodeCoverage -burst-disable-compilation -coverageOptions enableCyclomaticComplexity;assemblyFilters:+VisualPinball.Engine;pathFilters:-**/VisualPinball.Engine/Math/Triangulator/**,-**/VisualPinball.Engine/Math/Mesh/** -coverageResultsPath artifacts
+#      - run: |
+#          curl -s https://codecov.io/bash | bash -s - -f ${{ steps.test.outputs.artifactsPath }}/TestProject~-opencov/EditMode/TestCoverageResults_0000.xml
+#      - uses: MirrorNG/nunit-reporter@v1.1.0
+#        if: always()
+#        with:
+#          path: ${{ steps.test.outputs.artifactsPath }}/*.xml
+#          access-token: ${{ secrets.GITHUB_TOKEN }}
+#      - uses: actions/upload-artifact@v3
+#        if: always()
+#        with:
+#          name: Test results
+#          path: ${{ steps.test.outputs.artifactsPath }}
 
   dispatch:
     name: Dispatch
     runs-on: ubuntu-latest
-    needs: [ test ]
+    needs: [ build ]
     if: github.repository == 'freezy/VisualPinball.Engine' && github.ref == 'refs/heads/master'
     steps:
       - uses: peter-evans/repository-dispatch@v1
